feat: add left sidebar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,67 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<div class="container">
+		<div class="info max-pad">
+			<div class="logo">
+				<img src="img/logo.jpg" alt="haker">
+			</div>
+			<div class="info-detail">
+				<div class="info_item mb-20">
+					<div class="info-title">Contacts</div>
+					<div class="row mb-20">
+						<img src="img/location1.png" alt="location">
+						<div class="lh-20">
+							<b>Country</b>:Russia<br>
+							<b>City</b>:Simferopol<br>
+							<b>Street</b>:Some street<br>
+							<b>Home </b>: 45
+						</div>
+					</div>
+					<div class="row mb-20">
+						<img src="img/mail.svg" alt="location">
+						<div>
+							ismailaga123@gmail.com
+						</div>
+					</div>
+					<div class="row mb-20">
+						<img src="img/telegram.png" alt="location">
+						<div>
+							@IsmailHab
+						</div>
+					</div>
+				</div>
+				<div class="info_item mb-20">
+					<div class="info-title">Skills</div>
+					<div class="row mb-20">
+						<img src="img/js.png" alt="Java Script">
+							<div class='skill'>
+								<div class="range"></div>
+							</div>
+					</div>
+					<div class="row mb-20">
+						<img src="img/css.png" alt="Java Script">
+						<div class='skill'>
+							<div class="range"></div>
+						</div>
+					</div>
+					<div class="row mb-20">
+						<img src="img/html.png" alt="Java Script">
+						<div class='skill'>
+							<div class="range"></div>
+						</div>
+					</div>
+					<div class="row mb-20">
+						<img src="img/VS.png" alt="Java Script">
+						<div class='skill'>
+							<div class="range"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+		
+	</div>
 </body>
 </html>
