--- a/index.html
+++ b/index.html
@@ -67,7 +67,42 @@
 			</div>
 			
 		</div>
-		
+		<div class="detail max-pad">
+			<h1 class="lh-40 tac">
+				Ismail Habibov
+			</h1>
+			<div class="hr"></div>
+			<h2 class="tac">Junior Frontend Developer</h2>
+			
+			<div>
+				<h3 class="tac">Personal Profile</h3>
+				<p>I am a junior frontend developer. I have little experience in commercial projects, about a year and a half. I will be glad to participate in any project that will help me pump my skills.</p>
+			</div>
+			<div class="hr"></div>
+			<div>
+				<h3 class="tac">Education</h3>
+				<p>From 2002 to 2006 I studied at the Ukrainian Academy of Printing with a degree in Enterprise Economics.
+					Graduated from accounting courses in 2010.</p>
+				<h4>I finished the following courses with a wonderful teacher <a href="http://itgid.info">Alexander Lushchenko.</a></h4>
+				<ul>
+					<li>JS Stage 2.0</li>
+					<li>PHP Stage 2.0</li>
+					<li>OOP in JavaScript</li>
+					<li>Node JS</li>
+				</ul>
+			</div>
+			<div class="hr"></div>
+			<div>
+				<h3 class="tac">Working Experience</h3>
+				<p>Beginning in September 2018, I trained as a tester. After that, 1 year and 7 months Rabol by the layout designer at <a href="http://https://www.namesilo.com/">NAMESILO</a></p>
+				<h5>My work done in this company</h4>
+				<ul>
+					<li><a href="https://www.namesilo.com/email/titan">Titan Email</a></li>
+					<li><a href="https://www.namesilo.com/api-reference">Domain API Reference</a></li>
+					<li><a href="https://www.namesilo.com/about-us">About Us</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
