feat:add header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<header>
+		<div class="header-container">
+			<nav class="nav">
+				<ul>
+					<li class="nav-item"><a href="#Conatcts">Conatcts</a></li>
+					<li class="nav-item"><a href="#About Myself">About Myself</a></li>
+					<li class="nav-item"><a href="#Education">Education</a></li>
+					<li class="nav-item"><a href="#Code">Code</a></li>
+					<li class="nav-item"><a href="#Courses">Courses</a></li>
+					<li class="nav-item"><a href="#Projects">Projects</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	
 	<div class="container">
 		<div class="info max-pad">
 			<div class="logo">
