--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
 			</div>
 		</div>
 	</main>
-
+	<footer>
+		<div > &copy; 2022</div>
+		<div>
+			<a href="https://github.com/fuad123456">
+				<img src="img/github.svg" alt="Github">
+			</a>
+		</div>
+		<div>
+			<a href="https://rs.school/js/"><img src="img/rs_school_js.svg" alt="rs school js"></a></div>
+	</footer>
 </body>
 </html>
