--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				<div class="info-detail">
 					<div class="info_item mb-20">
-						<div class="info-title">Contacts</div>
+						<h2 class="info-title">Contacts</h2>
 						<ul class="list">
 							<li class="list-item">
 								<div>
@@ -74,7 +74,7 @@
 						</ul>
 					</div>
 					<div class="info_item mb-20">
-						<div class="info-title">Skills</div>
+						<h2 class="info-title">Skills</h2>
 						<ul class="list">
 							<li class="list-item">
 								<div>
@@ -124,12 +124,12 @@
 			<div class="detail max-pad">
 				
 				<div>
-					<h3 class="tac">Personal Profile</h3>
+					<h2 class="tac">Personal Profile</h2>
 					<p>I am a junior frontend developer. I have little experience in commercial projects, about a year and a half. I will be glad to participate in any project that will help me pump my skills.</p>
 				</div>
 				<div class="hr"></div>
 				<div>
-					<h3 class="tac">Education</h3>
+					<h2 class="tac">Education</h2>
 					<p>From 2002 to 2006 I studied at the Ukrainian Academy of Printing with a degree in Enterprise Economics.
 						Graduated from accounting courses in 2010.</p>
 					<h4>I finished the following courses with a wonderful teacher <a href="http://itgid.info">Alexander Lushchenko.</a></h4>
@@ -142,7 +142,7 @@
 				</div>
 				<div class="hr"></div>
 				<div>
-					<h3 class="tac">Working Experience</h3>
+					<h2 class="tac">Working Experience</h2>
 					<p>Beginning in September 2018, I trained as a tester. After that, 1 year and 7 months Rabol by the layout designer at <a href="http://https://www.namesilo.com/">NAMESILO</a></p>
 					<h5>My work done in this company</h4>
 					<ul>
