refactor: update some files

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							</li>
 							<li class="list-item">
 								<div>
-									<img src="img/react.png" alt="React">
+									<img src="img/react.svg" alt="React">
 								</div>
 								<div class='skill'>
 									<div class="range"></div>
@@ -136,7 +136,7 @@
 							If the left side is more heavy, return "Left"; if the right side is more heavy, return "Right"; if they are balanced, return "Balance".
 					</em>
 					<pre>
-						<code>
+						<code class="preElement">
 	const weightMap = {
 		"!": 2,
 		"?": 3,
