feat: add info languages

--- a/index.html
+++ b/index.html
@@ -128,7 +128,32 @@
 					<p>I am a junior frontend developer. I have little experience in commercial projects, about a year and a half. I will be glad to participate in any project that will help me pump my skills.</p>
 				</div>
 				<div class="hr"></div>
+
 				<div>
+					<h2 class="tac">Education</h2>
+					<p>From 2002 to 2006 I studied at the Ukrainian Academy of Printing with a degree in Enterprise Economics.
+						Graduated from accounting courses in 2010.</p>
+					<h4>I finished the following courses with a wonderful teacher <a href="http://itgid.info">Alexander Lushchenko.</a></h4>
+					<ul>
+						<li>JS Stage 2.0</li>
+						<li>PHP Stage 2.0</li>
+						<li>OOP in JavaScript</li>
+						<li>Node JS</li>
+					</ul>
+				</div>
+        <div class="hr"></div>
+        <div>
+					<h2 class="tac">Working Experience</h2>
+					<p>Beginning in September 2018, I trained as a tester. After that, 1 year and 7 months worked by the layout designer at <a href="http://https://www.namesilo.com/">NAMESILO</a></p>
+					<h5>My work done in this company</h4>
+					<ul>
+						<li><a href="https://www.namesilo.com/email/titan">Titan Email</a></li>
+						<li><a href="https://www.namesilo.com/api-reference">Domain API Reference</a></li>
+						<li><a href="https://www.namesilo.com/about-us">About Us</a></li>
+					</ul>
+				</div>
+				<div class="hr"></div>
+        <div>
 					<h2 class="tac">Code from Codewars</h2>
 					<h4>Exclamation marks series: Put the exclamation marks and question marks on the balance - are they balanced?</h4>
 					<em>
@@ -156,29 +181,17 @@
 					</pre>
 				</div>
 				<div class="hr"></div>
-				<div>
-					<h2 class="tac">Education</h2>
-					<p>From 2002 to 2006 I studied at the Ukrainian Academy of Printing with a degree in Enterprise Economics.
-						Graduated from accounting courses in 2010.</p>
-					<h4>I finished the following courses with a wonderful teacher <a href="http://itgid.info">Alexander Lushchenko.</a></h4>
-					<ul>
-						<li>JS Stage 2.0</li>
-						<li>PHP Stage 2.0</li>
-						<li>OOP in JavaScript</li>
-						<li>Node JS</li>
-					</ul>
-				</div>
-				<div class="hr"></div>
-				<div>
-					<h2 class="tac">Working Experience</h2>
-					<p>Beginning in September 2018, I trained as a tester. After that, 1 year and 7 months worked by the layout designer at <a href="http://https://www.namesilo.com/">NAMESILO</a></p>
-					<h5>My work done in this company</h4>
-					<ul>
-						<li><a href="https://www.namesilo.com/email/titan">Titan Email</a></li>
-						<li><a href="https://www.namesilo.com/api-reference">Domain API Reference</a></li>
-						<li><a href="https://www.namesilo.com/about-us">About Us</a></li>
-					</ul>
-				</div>
+				<div class="detail max-pad">
+          <div>
+            <h2 class="tac">Languages</h2>
+              <ul>
+                <li>English</li>
+                <li> Arabic </li>
+                <li> Russian </li>
+                <li>Turkie</li>
+                <li>Ukrainian</li>
+              </ul>
+          </div>
 			</div>
 		</div>
 	</main>
