refactor: update links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<nav class="nav">
 				<ul>
 					<li class="nav-item"><a href="#Conatcts">Conatcts</a></li>
-					<li class="nav-item"><a href="#About Myself">About Myself</a></li>
+					<li class="nav-item"><a href="#AboutMyself">About Myself</a></li>
 					<li class="nav-item"><a href="#Education">Education</a></li>
 					<li class="nav-item"><a href="#Code">Code</a></li>
 					<li class="nav-item"><a href="#Courses">Courses</a></li>
@@ -42,7 +42,7 @@
 
 				<div class="info-detail">
 					<div class="info_item mb-20">
-						<h2 class="info-title">Contacts</h2>
+						<h2 class="info-title" id="Conatcts">Contacts</h2>
 						<ul class="list">
 							<li class="list-item">
 								<div>
@@ -123,11 +123,11 @@
 			</div>
 			<div class="detail max-pad">
 				
-				<div>
+				<div id="AboutMyself">
 					<h2 class="tac">Personal Profile</h2>
 					<p>I am a junior frontend developer. I have little experience in commercial projects, about a year and a half. I will be glad to participate in any project that will help me pump my skills.</p>
 				</div>
-				<div class="hr"></div>
+				<div class="hr" id="Education"></div>
 
 				<div>
 					<h2 class="tac">Education</h2>
@@ -141,7 +141,7 @@
 						<li>Node JS</li>
 					</ul>
 				</div>
-        <div class="hr"></div>
+        <div class="hr" id="Projects"></div>
         <div>
 					<h2 class="tac">Working Experience</h2>
 					<p>Beginning in September 2018, I trained as a tester. After that, 1 year and 7 months worked by the layout designer at <a href="http://https://www.namesilo.com/">NAMESILO</a></p>
@@ -152,7 +152,7 @@
 						<li><a href="https://www.namesilo.com/about-us">About Us</a></li>
 					</ul>
 				</div>
-				<div class="hr"></div>
+				<div class="hr" id="Code"></div>
         <div>
 					<h2 class="tac">Code from Codewars</h2>
 					<h4>Exclamation marks series: Put the exclamation marks and question marks on the balance - are they balanced?</h4>
@@ -180,7 +180,7 @@
 						</code>
 					</pre>
 				</div>
-				<div class="hr"></div>
+				<div class="hr" ></div>
 				<div class="detail max-pad">
           <div>
             <h2 class="tac">Languages</h2>
