--- a/index.html
+++ b/index.html
@@ -208,8 +208,7 @@
 				</a>
 			</div>
 			<div>
-				<a href="https://rs.school/js/"><img src="img/rs_school_js.svg" alt="rs school js"
-						style="background-color:white"></a>
+				<a href="https://rs.school/js/"><img src="img/rs_school_js.svg" alt="rs school js" class="logo-school"></a>
 			</div>
 		</div>
 
